knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/inov8__PMT_Task__c/fields/No_of_Completed_Tasks__c.field-meta.xml
<CustomField>
    <fullName>No_of_Completed_Tasks__c</fullName>
    <label># of Completed Tasks</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>