knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/inov8__PMT_Task__c/fields/Related_Action_Plan__c.field-meta.xml
<CustomField>
    <fullName>Related_Action_Plan__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Related Action Plan</label>
    <referenceTo>ActionPlan</referenceTo>
    <relationshipLabel>PMT Tasks</relationshipLabel>
    <relationshipName>PMT_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>