knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/inov8__PMT_Task__c/validationRules/Restrict_Task_Name_Edit_For_NonTemplate.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Task_Name_Edit_For_NonTemplate</fullName>
    <active>true</active>
    <description>You cannot edit the Task Name (Milestone).</description>
    <errorConditionFormula>AND(
    NOT( inov8__IsTemplate__c),
    ISCHANGED( Name )
)</errorConditionFormula>
    <errorMessage>You cannot edit the Task Name (Milestone).</errorMessage>
</ValidationRule>