knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/inov8__PMT_Task__c/validationRules/Validate_Task_Status_Without_Service_Acc.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Task_Status_Without_Service_Acc</fullName>
    <active>true</active>
    <description>Please identify the Service Account associated with the PMT Phase.Please identify the Service Account associated with the PMT Phase.</description>
    <errorConditionFormula>AND(
    NOT(ISPICKVAL( inov8__Status__c , &quot;Not Started&quot;)),
    ISBLANK(inov8__Phase__r.Service_Account__c)
)</errorConditionFormula>
    <errorDisplayField>inov8__Status__c</errorDisplayField>
    <errorMessage>Please identify the Service Account associated with the PMT Phase.</errorMessage>
</ValidationRule>